添加用户菜单sql查询
