# service/system/api/internal/types/types.go
@@ -1,11 +1,26 @@
 // Code generated by goctl. DO NOT EDIT.
-// goctl 1.7.3
+// goctl 1.10.1
 
 package types
 
+type Menu struct {
+	MenuId   string `json:"menuId"`
+	Name     string `json:"name"`
+	Code     string `json:"code"`
+	Path     string `json:"path"`
+	Serial   string `json:"serial"`
+	ParentId string `json:"parentId"`
+}
+
+type Role struct {
+	RoleId string `json:"roleId"`
+	Name   string `json:"name"`
+	Code   string `json:"code"`
+}
+
 type LoginRequest struct {
-	UserName string `json:"username"`
-	Password string `json:"password"`
+	UserName string `json:"username,default=Sutter"`
+	Password string `json:"password,default=1234@Abcd"`
 }
 
 type LoginResponse struct {
@@ -13,6 +28,8 @@ type LoginResponse struct {
 	AccessToken  string `json:"accessToken"`
 	AccessExpire int    `json:"accessExpire"`
 	RefreshAfter int    `json:"refreshAfter"`
+	Roles        []Role `json:"roles"`
+	Menus        []Menu `json:"menus"`
 }
 
 type RegisterRequest struct {
